# dtu-02476-ml-ops

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  data.dvc  models.dvc  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_website.txt
.devcontainer/: config.fish  devcontainer.json  init.create.sh  init.sh  init.start.sh
.devcontainer/cpu/: devcontainer.json
.devcontainer/gpu/: devcontainer.json
.dvc/: config
.github/workflows/: tests.yaml
cloudbuilds/: inference.yaml  website.yaml
config/: config.yaml  default_config.yaml
configs/: config.yaml  default_config.yaml  logging.yaml  sweep.yaml
configs/models/: resnet18.yaml
configs/training.models/: resnet18.yaml  simple_mlp.yaml
dockerfiles/: dev.Dockerfile  predict.Dockerfile  predict.local.Dockerfile  train.Dockerfile  website.Dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
reports/: README.md
src/ml_backend/: __init__.py  inference_server.py  ml_logging.py  predict.py  storage.py  train_model.py  types.py
src/ml_backend/data/: dataset.py  make_dataset.py
src/ml_backend/data/tests/: test_data.py
src/ml_backend/models/: model.py  simple_mlp.py
src/ml_backend/tests/: test_ml_backend.py
src/website/: main.py
