[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dtu-02476-ml-ops"
version = "0.0.1"
description = "A cat detecting website"
authors = [
  { name = "Group 64", email = "s204102@student.dtu.dk" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
package-dir = {"" = "src"}
# packages = ["ml_backend", "ml_backend.data", "ml_backend.models", "ml_backend.visualizations"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["*.tests"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
